--- a/Index.html
+++ b/Index.html
@@ -3,8 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Entre letras - Comunidad de lectura</title>
+    <link rel="stylesheet" href="Style.css">
 </head>
+<header>
+    <h1>Entre letras</h1>
+</header>
+<nav>
+    <ul>
+        <li><a href="#"></a>Inicio</li>
+        <li><a href="#"></a>Clubs</li>
+        <li><a href="#"></a>Tienda</li>
+        <li><a href="#"></a>Blog</li>
+        <li><a href="#"></a>Contacto</li>
+    </ul>
+</nav>
 <body>
     
 </body>
