Crea sección hero con botón para unirse a clubes de lectura

--- a/Index.html
+++ b/Index.html
@@ -6,19 +6,32 @@
     <title>Entre letras - Comunidad de lectura</title>
     <link rel="stylesheet" href="Style.css">
 </head>
-<header>
-    <h1>Entre letras</h1>
-</header>
-<nav>
-    <ul>
-        <li><a href="#"></a>Inicio</li>
-        <li><a href="#"></a>Clubs</li>
-        <li><a href="#"></a>Tienda</li>
-        <li><a href="#"></a>Blog</li>
-        <li><a href="#"></a>Contacto</li>
-    </ul>
-</nav>
+
 <body>
+    <header>
+        <h1>Entre letras</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#"></a>Inicio</li>
+            <li><a href="#"></a>Clubs</li>
+            <li><a href="#"></a>Tienda</li>
+            <li><a href="#"></a>Blog</li>
+            <li><a href="#"></a>Contacto</li>
+        </ul>
+    </nav>
+    <main>
+        <Section>
+            <div>
+                <h2>Únete a nuestros clubes</h2>
+                <p>Exploremos juntos todo lo que la literatura tiene para ofrecer</p>
+                <button>¡Quiero unirme!</button>
+            </div>
+            <img src="" alt="">
+        </Section>
+        
+
+    </main>
     
 </body>
 </html>
