Agrega sección recomendaciones del mes

--- a/Index.html
+++ b/Index.html
@@ -29,6 +29,29 @@
             </div>
             <img src="" alt="">
         </Section>
+
+        <section>
+            <h2>Recomendaciones del mes</h2>
+                <article>
+                    <img src="" alt="">
+                    <h3>Las cosas que perdimos en el fuego</h3>
+                    <p>Mariana Enriquez</p>
+                </article>
+
+                 <article>
+                    <img src="" alt="">
+                    <h3>Cometas en el cielo</h3>
+                    <p>Khaled Hosseini</p>
+                </article>
+
+                 <article>
+                    <img src="" alt="">
+                    <h3>La perra</h3>
+                    <p>Pilar Quintana</p>
+                </article>
+        
+            </section>
+
         
 
     </main>
