Agrega imagenes a la sección recomendaciones

--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="hero">
         <h1>Entre letras</h1>
         <p>Comunidad literaria</p>
     </header>
@@ -31,24 +31,24 @@
             <img src="" alt="">
         </section>
 
-        <section>
+        <section class="recomendaciones">
             <h2>Recomendaciones del mes</h2>
                 <article>
-                    <img src="" alt="">
+                    <img src="/Images/Las_cosas_que_perdimo_ME.jpg" alt="Las cosas que perdimos en el fuego" class="portada">
                     <h3>Las cosas que perdimos en el fuego</h3>
                     <p>Mariana Enriquez</p>
                 </article>
 
                  <article>
-                    <img src="" alt="">
-                    <h3>Cometas en el cielo</h3>
-                    <p>Khaled Hosseini</p>
+                    <img src="/Images/Actos_Humanos_HK.jpg" alt="Actos Humanos" class="portada">
+                    <h3>Actos Humanos</h3>
+                    <p>Hang Kang</p>
                 </article>
 
                  <article>
-                    <img src="" alt="">
-                    <h3>La perra</h3>
-                    <p>Pilar Quintana</p>
+                    <img src="/Images/Cadaver_exquisito_AB.webp" alt="Cadaver Exquisito" class="portada">
+                    <h3>Cadaver Exquisito</h3>
+                    <p>Agustina Bazterrica</p>
                 </article>
         </section>
     </main>
