Agrega enlace Google Fonts al html

--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Raleway:wght@300;400;500;700&display=swap" rel="stylesheet">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,7 @@
 </head>
 
 <body>
-    <header class="hero">
+    <header>
         <h1>Entre letras</h1>
         <p>Comunidad literaria</p>
     </header>
@@ -22,7 +23,7 @@
         </ul>
     </nav>
     <main>
-        <section>
+        <section class="hero">
             <div>
                 <h2>Únete a nuestros clubes</h2>
                 <p>Exploremos juntos todo lo que la literatura tiene para ofrecer</p>
