"Cambia fuente, ajusta seccion recomendaciones"

--- a/Index.html
+++ b/Index.html
@@ -34,6 +34,7 @@
 
         <section class="recomendaciones">
             <h2>Recomendaciones del mes</h2>
+            <div class="portadasrec">
                 <article>
                     <img src="/Images/Las_cosas_que_perdimo_ME.jpg" alt="Las cosas que perdimos en el fuego" class="portada">
                     <h3>Las cosas que perdimos en el fuego</h3>
@@ -51,6 +52,8 @@
                     <h3>Cadaver Exquisito</h3>
                     <p>Agustina Bazterrica</p>
                 </article>
+            </div>
+                
         </section>
     </main>
     <footer>
