Cambio el color de fondo en seccion recomendaciones

--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
     <nav>
         <ul>
             <li><a href="#">Inicio</a></li>
-            <li><a href="#">Clubs</a></li>
+            <li><a href="#">Clubes</a></li>
             <li><a href="#">Tienda</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Contacto</a></li>
@@ -29,17 +29,18 @@
                 <p>Exploremos juntos todo lo que la literatura tiene para ofrecer</p>
                 <button>¡Quiero unirme!</button>
             </div>
-            <img src="" alt="">
+            
         </section>
 
         <section class="recomendaciones">
             <h2>Recomendaciones del mes</h2>
             <div class="portadasrec">
-                <article>
+                <div class="Lascosas"> <article>
                     <img src="/Images/Las_cosas_que_perdimo_ME.jpg" alt="Las cosas que perdimos en el fuego" class="portada">
                     <h3>Las cosas que perdimos en el fuego</h3>
                     <p>Mariana Enriquez</p>
                 </article>
+                </div>
 
                  <article>
                     <img src="/Images/Actos_Humanos_HK.jpg" alt="Actos Humanos" class="portada">
