Corrige sección hero

--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
     <main>
         <section class="hero">
             <div>
-                <h2>Únete a nuestros clubes</h2>
+                <h2>Únete a nuestros clubes de lectura</h2>
                 <p>Exploremos juntos todo lo que la literatura tiene para ofrecer</p>
                 <button>¡Quiero unirme!</button>
             </div>
