se verifican imagenes

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                 </div>
 
                  <article>
-                    <img src="/Images/Actos_Humanos_HK.jpg" alt="Actos Humanos" class="portada">
+                    <img src="Images/Actos_Humanos_HK.jpg" alt="Actos Humanos" class="portada">
                     <h3>Actos Humanos</h3>
                     <p>Hang Kang</p>
                 </article>
 
                  <article>
-                    <img src="/Images/Cadaver_exquisito_AB.webp" alt="Cadaver Exquisito" class="portada">
+                    <img src="Images/Cadaver_exquisito_AB.webp" alt="Cadaver Exquisito" class="portada">
                     <h3>Cadaver Exquisito</h3>
                     <p>Agustina Bazterrica</p>
                 </article>
